[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
rust-version = "1.65.0"
name = "libp2p_stream_protocol"
description = "Stream Protocols for libp2p"
authors = ["Santo Shakil <shakil.mezbah@gmail.com>"]
categories = ["network-programming", "asynchronous"]
keywords = ["peer-to-peer", "libp2p", "networking", "stream"]
repository = "https://github.com/santoshakil/libp2p_stream_protocol"

[dependencies.either]
version = "1.8.0"

[dependencies.futures]
version = "0.3.28"

[dependencies.futures-timer]
version = "3.0.2"

[dependencies.instant]
version = "0.1.12"

[dependencies.libp2p-core]
version = "0.40.0"

[dependencies.libp2p-identity]
version = "0.2.0"

[dependencies.libp2p-swarm]
version = "0.43.0"

[dependencies.log]
version = "0.4.19"

[dependencies.rand]
version = "0.8"

[dependencies.void]
version = "1.0"

[dev-dependencies.async-std]
version = "1.6.2"

[dev-dependencies.env_logger]
version = "0.10.0"

[dev-dependencies.libp2p-swarm]
version = "0.43.0"
features = ["macros"]

[dev-dependencies.libp2p-swarm-test]
version = "0.2.0"
